修复 勾选多个请款记录id时，未判断供应商

--- a/core/app/views/Payments/index.html
+++ b/core/app/views/Payments/index.html
@@ -71,7 +71,7 @@
         <tr>
           <td>
               #{if !pay.batchReviewApply}
-                <input type="checkbox" name="pids" value="${pay.id}" data-cooperId="${pay.cooperator?.id}">
+                <input type="checkbox" name="pids" value="${pay.id}" cooperId="${pay.cooperator?.id}">
               #{/if}
           </td>
           <td><a href="@{Payments.show(pay.id)}">${pay.paymentNumber}</a></td>
