--- a/core/app/views/Payments/batchApply.html
+++ b/core/app/views/Payments/batchApply.html
@@ -32,7 +32,7 @@
             <input type="text" value="${apply.cooperator.name}" readonly>
             <input type="hidden" name="apply.cooperator.id" value="${apply.cooperator.id}">
           </td>
-          <th>总请款金额</th>
+          <th></th>
           <td></td>
         </tr>
         <tr>
@@ -75,7 +75,7 @@
               ${applyer.username} &nbsp;
               #{/list}
           </td>
-          <td></td>
+          <td>${pay.currency.symbol()}  ${pay.totalFees()._3}</td>
           <td>#{time_tooltip time:pay.updateAt, datetime:true/}</td>
           <td>#{time_tooltip time:pay.createdAt, datetime:true/}</td>
         </tr>
