--- a/core/app/views/Payments/batchApplyIndex.html
+++ b/core/app/views/Payments/batchApplyIndex.html
@@ -62,16 +62,16 @@
       <div class="span12">
         <table class="table table-condensed table-bordered" id="data-table">
           <tr>
-            <th width="115px;">请款审核ID</th>
+            <th width="125px;">请款审核ID</th>
             <th width="250px;">请款项</th>
             <th width="60px;">付款方式</th>
             <th width="90px;">审核阶段</th>
             <th width="100px;">供应商</th>
             <th width="100px;">核单金额</th>
             <th width="180px;">创建人/创建时间</th>
-            <th width="200px;">品牌部审核意见/人</th>
-            <th width="200px;">审计部审核意见/人</th>
-            <th width="200px;">财务部审核意见/人</th>
+            <th width="180px;">品牌部审核意见/人</th>
+            <th width="180px;">审计部审核意见/人</th>
+            <th width="180px;">财务部审核意见/人</th>
             <th width="200px;">备注</th>
           </tr>
         #{list items: applies, as: 'a'}
@@ -89,17 +89,17 @@
             <td>${a.creator.username}/#{time_tooltip time:a.createDate, datetime:true/}</td>
             <td>
                 #{list items:a.getHandlers(models.User.D.Brand),as:'b'}
-                  (${b.result?.label()} / ${b.handler.username}) &nbsp;&nbsp;
+                  ${b.result?.label()} / ${b.handler.username} <br>
                 #{/list}
             </td>
             <td>
                 #{list items:a.getHandlers(models.User.D.Audit),as:'b'}
-                  (${b.result?.label()} / ${b.handler.username}) &nbsp;&nbsp;
+                  ${b.result?.label()} / ${b.handler.username} <br>
                 #{/list}
             </td>
             <td>
                 #{list items:a.getHandlers(models.User.D.Finance),as:'b'}
-                  (${b.result?.label()} / ${b.handler.username}) &nbsp;&nbsp;
+                  ${b.result?.label()} / ${b.handler.username} <br>
                 #{/list}
             </td>
             <td>${a.memo}</td>
