--- a/core/app/views/Payments/showBatchApply.html
+++ b/core/app/views/Payments/showBatchApply.html
@@ -4,6 +4,10 @@
     #{script 'applys/index.es6'/}
 #{/set}
 
+
+#{errorMsgs /}
+#{flash_alert /}
+
 <form action="" method="post" id="">
 #{info_row title:'请款审核单'/}
 
@@ -30,7 +34,7 @@
         <tr>
           <th>供应商</th>
           <td><input type="text" readonly value="${apply.cooperator?.name}"></td>
-          <th>总请款金额</th>
+          <th>总核单金额</th>
           <td>
             <input type="text" value="${apply.totalApplyAmount()._3}" class="span2" readonly>
             <select class="span2">
@@ -137,14 +141,14 @@
           #{if apply.showSubmitBtn()}
             <input type="submit" class="btn btn-primary" value="提交">
           #{/if}
-          #{if apply.status.name() == 'Brand'}
+          #{if apply.status.name() == 'Brand' && currDepart == 'Brand'}
             <input type="button" class="btn btn-warning" value="移交审计部审核" name="transferBtn" data-status="Audit">
           #{/if}
-          #{if apply.status.name() == 'Audit'}
+          #{if apply.status.name() == 'Audit' && currDepart == 'Audit'}
             <input type="button" class="btn btn-warning" value="移交财务部审核" name="transferBtn" data-status="Finance">
           #{/if}
-          #{if apply.status.name() == 'Finance'}
-            <input type="button" class="btn btn-success" value="审核结束">
+          #{if apply.status.name() == 'Finance' && currDepart == 'Finance'}
+            <input type="button" class="btn btn-success" value="审核结束" id="endBtn">
           #{/if}
           </td>
         </tr>
