'更改 “图号/版本”文字的相关页面统统更改文字为“工厂物料代码”

--- a/core/app/views/Cooperators/_mat_items.html
+++ b/core/app/views/Cooperators/_mat_items.html
@@ -7,7 +7,7 @@
     <th>包装组编号</th>
     <th>规格</th>
     <th width="150px;">工艺</th>
-    <th width="150px;">图号/版本</th>
+    <th width="150px;">工厂物料代码</th>
     <th>价格</th>
     <th>生产周期(day)</th>
     <th>每箱数量</th>
