--- a/core/app/views/Materials/_unit_list.html
+++ b/core/app/views/Materials/_unit_list.html
@@ -7,7 +7,7 @@
     <th>B0M—ID</th>
     <th>规格</th>
     <th width="150px;">工艺</th>
-    <th width="150px;">图号/版本</th>
+    <th width="150px;">工厂物料代码</th>
     <th width="150px;">最近采购价</th>
   </tr>
 #{list items:materials, as:'m'}
