--- a/core/app/views/Materials/blankBom.html
+++ b/core/app/views/Materials/blankBom.html
@@ -52,7 +52,7 @@
         <td><input type="text" class="input-xxlarge" name="m.texture" value=""></td>
       </tr>
       <tr>
-        <th>图号/版本</th>
+        <th>工厂物料代码</th>
         <td><input type="text" name="m.version" value=""></td>
         <th>工艺</th>
         <td><input type="text" class="input-xxlarge" name="m.technology" value=""></td>
