--- a/core/app/views/Materials/edit.html
+++ b/core/app/views/Materials/edit.html
@@ -53,7 +53,7 @@
         </td>
       </tr>
       <tr>
-        <th>图号/版本</th>
+        <th>工厂物料代码</th>
         <td><input type="text" name="m.version" value="${material.version}" autocomplete="off"></td>
         <th>工艺</th>
         <td>
