--- a/core/app/views/Materials/editBom.html
+++ b/core/app/views/Materials/editBom.html
@@ -78,7 +78,7 @@
     <th>物料类别</th>
     <th>规格</th>
     <th width="150px;">工艺</th>
-    <th width="150px;">图号/版本</th>
+    <th width="150px;">工厂物料代码</th>
     <th width="150px;">最近采购价</th>
     <th>备注</th>
     <th width="100px;">操作</th>
