--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -24,7 +24,7 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称 or 规格 or 工艺 or 图号/版本" value="${p.search}">
+          <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称 or 规格 or 工艺 or 工厂物料代码" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
@@ -47,7 +47,7 @@
             <th>规格</th>
             <th width="150px;">材质</th>
             <th width="150px;">工艺</th>
-            <th width="150px;">图号/版本</th>
+            <th width="150px;">工厂物料代码</th>
             <th width="150px;">最近采购价</th>
             <th width="250px;">操作</th>
           </tr>
