--- a/core/app/views/Products/_material.html
+++ b/core/app/views/Products/_material.html
@@ -58,7 +58,7 @@
           <th>物料类别</th>
           <th>规格</th>
           <th width="150px;">工艺</th>
-          <th width="150px;">图号/版本</th>
+          <th width="150px;">工厂物料代码</th>
         </tr>
       #{list items:pro.materials, as:'m'}
         <tr>
