--- a/core/app/views/Products/showMaterialList.html
+++ b/core/app/views/Products/showMaterialList.html
@@ -7,7 +7,7 @@
     <th>规格</th>
     <th width="150px;">材质</th>
     <th width="150px;">工艺</th>
-    <th width="150px;">图号/版本</th>
+    <th width="150px;">工厂物料代码</th>
   </tr>
 #{list items:materials, as:'m'}
   <tr>
