物流请款结构变更

--- a/core/app/views/Payments/_transportApply.html
+++ b/core/app/views/Payments/_transportApply.html
@@ -1,10 +1,14 @@
+#{form @PaymentUnits.approvePaymentFromShipment(payment.id)}
 <div class="row-fluid">
   <div class="btn-toolbar">
+  #{power.ck 'paymentunits.approve'}
+    <input type="submit" class="btn btn-info" value="批准"/>
+  #{/power.ck}
     <a href="@{Payments.pdf(payment.id)}" target="_blank" class="btn btn-success">下载 PDF</a>
   </div>
   <table class="table table-bordered table-condensed">
     <tr>
-      <th></th>
+      <th width="20px;"><input type="checkbox" id="checkbox_all" class="checkall"></th>
       <th width="200px;">关联运输资料</th>
       <th width="150px;">实际到货时间</th>
       <th width="150px;">费用类型</th>
@@ -19,7 +23,7 @@
     </tr>
   #{list items: units, as:'fee'}
     <tr>
-      <td></td>
+      <td><input type="checkbox" name="paymentUnitIds" value="${fee.id}"></td>
       <td>
           #{if fee.shipItem}
             <a href="@{Shipments.show(fee.shipment.id)}#${fee.shipItem.id}" target="_blank">
@@ -53,3 +57,4 @@
     </tr>
   </table>
 </div>
+#{/form}
