--- a/core/app/views/Products/showAttr.html
+++ b/core/app/views/Products/showAttr.html
@@ -1,6 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:pro.sku /}
 #{set 'moreScripts'}
+    #{script 'jquery.filedrop.js' /}
+    #{script 'component/dropUpload.coffee'/}
     #{script 'products/show.es6'/}
 #{/set}
 <style>
@@ -12,35 +14,213 @@
 #{errorMsgs /}
 #{flash_alert /}
 
-#{info_row title:'物流信息'/}
 
-<div class="row-fluid">
-  <div class="input-prepend input-append inline">
-    <span class="add-on">HS CODE:</span>
-    <input type="text" name="hs_code" placeholder="请输入HS CODE" value="${pro.hs_code}" required>
+<ul class="nav nav-tabs">
+  <li class="active">
+    <a href="#basicinfo" data-toggle='tab'>基本信息</a>
+  </li>
+  <li>
+    <a href="#extends" data-toggle='tab'>物流信息</a>
+  </li>
+  <li>
+    <a href="#newattach" data-toggle='tab' id="showAttachs">附件管理</a>
+  </li>
+</ul>
+
+<div id="selling_tabs" class="tab-content">
+  <div class="tab-pane fade active in" id="basicinfo">
+    <div class="row-fluid">
+      <form action="@{Products.saveShipmentInfo()}" method="post">
+        <table class="table table-bordered">
+          <tr>
+            <th>SKU</th>
+            <td width="600px;">${pro.sku}<input id="p_sku" type="hidden" name="pro.sku" value="${pro.sku}"></td>
+            <th>Category</th>
+            <td>${pro.category}</td>
+          </tr>
+          <tr>
+            <th>Brand</th>
+            <td>${pro.family?.brand}</td>
+            <th>Family</th>
+            <td>${pro.family?.family}</td>
+          </tr>
+          <tr>
+            <th>长(包材)</th>
+            <td>
+              <div class="input-append">
+                <input type="text" class="input-mini" name="pro.lengths" value="${pro.lengths}">
+                <span class="add-on">mm</span>
+              </div>
+            </td>
+            <th>宽(包材)</th>
+            <td>
+              <div class="input-append">
+                <input type="text" class="input-mini" name="pro.width" value="${pro.width}">
+                <span class="add-on">mm</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <th>高(包材)</th>
+            <td>
+              <div class="input-append">
+
+                <input type="text" class="input-mini" name="pro.heigh" value="${pro.heigh}">
+                <span class="add-on">mm</span>
+              </div>
+            </td>
+
+            <th>重量(包材)</th>
+            <td>
+              <div class="input-append">
+                <input type="text" class="input-mini" name="pro.weight" value="${pro.weight}">
+                <span class="add-on">Kg</span>
+              </div>
+            </td>
+          </tr>
+
+          <tr>
+            <td>长(产品)</td>
+            <td>
+              <div class="input-append">
+                <input type="text" class="input-mini" name="pro.productLengths" value="${pro.productLengths}">
+                <span class="add-on">mm</span>
+              </div>
+            </td>
+
+            <td>宽(产品)</td>
+            <td>
+              <div class="input-append">
+                <input type="text" class="input-mini" name="pro.productWidth" value="${pro.productWidth}">
+                <span class="add-on">mm</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <th>高(产品)</th>
+            <td>
+              <div class="input-append">
+
+                <input type="text" class="input-mini" name="pro.productHeigh" value="${pro.productHeigh}">
+                <span class="add-on">mm</span>
+              </div>
+            </td>
+            <th>重量(产品)</th>
+            <td>
+              <div class="input-append">
+                <input type="text" class="input-mini" name="pro.productWeight" value="${pro.productWeight}">
+                <span class="add-on">Kg</span>
+              </div>
+            </td>
+          </tr>
+
+          <tr>
+            <th>申报价格</th>
+            <td>
+              <div class="input-prepend">
+                <span class="add-on">$</span>
+                <input type="text" class="input-mini" value="${pro.declaredValue}" name="pro.declaredValue">
+              </div>
+            </td>
+            <th>申报品名(运输)</th>
+            <td>
+              <input type="text" name="pro.declareName" value="${pro.declareName}">
+            </td>
+          </tr>
+
+          <tr>
+            <th>用途(运输)</th>
+            <td><input type="text" name="pro.useWay" value="${pro.useWay}"/></td>
+            <th>中文品名(运输)</th>
+            <td><input type="text" name="pro.chineseName" value="${pro.chineseName}"/></td>
+          </tr>
+
+          <tr>
+            <th>产品名称</th>
+            <td><input type="text" style="width:95%" name="pro.abbreviation" value="${pro.abbreviation}"></td>
+            <th>HS CODE</th>
+            <td><input type="text" name="pro.hs_code" placeholder="请输入HS CODE" value="${pro.hs_code}" required></td>
+          </tr>
+          <tr>
+            <th colspan="4">
+              <input type="submit" class="btn btn-primary" value="保存">
+            </th>
+          </tr>
+        </table>
+      </form>
+    </div>
+  #{info_row title:'Product (Selling)QTY'/}
+    <div>
+      <table class="table table-bordered">
+        <tr>
+          <th>Qid</th>
+          <th>Inbound</th>
+          <th>Qty</th>
+          <th>Unsellable</th>
+          <th>Pending</th>
+          <th>ASIN</th>
+          <th>Whouse</th>
+          <th>&nbsp;</th>
+        </tr>
+      #{list items:qtys, as:'qty'}
+        <form method="post" action="@{Products.updateSellingQty()}">
+          <tr>
+            <td>${qty.id}<input type="hidden" name="qty.id" value="${qty.id}"></td>
+            <td>
+              <input type="text" class="input-mini" style="color:#4A8BF4;" name="qty.inbound" value="${qty.inbound}">
+            </td>
+            <td>
+              <input type="text" class="input-mini" style="color:#9BD444;" name="qty.qty" value="${qty.qty}">
+            </td>
+            <td>
+              <input type="text" class="input-mini" style="color:#D84A38;text-decoration:underline;" name="qty.unsellable" value="${qty.unsellable}">
+            </td>
+            <td>
+              <input type="text" class="input-mini" style="color:#CC6600;" name="qty.pending" value="${qty.pending}">
+            </td>
+            <td><a target="_blank" href="${qty.selling.asinLink()}">${qty.selling.asin}</a></td>
+            <td>${qty.whouse.name}</td>
+            <td>
+              <button class="btn btn-primary" data-confirm='确认更新?'>更新</button>
+            </td>
+          </tr>
+        </form>
+      #{/list}
+      </table>
+    #{records records:records, row:true/}
+    </div>
+
   </div>
 
-  <div class="input-prepend input-append inline">
-    <span class="add-on">属性:</span>
-    <input type="text" name="input_attr" data-url="@{Attributes.sameAttr()}" placeholder="手动输入属性">
-    <input type="button" class="btn btn-primary" value="添加" id="add_attr_btn">
+  <div class="tab-pane fade" id='extends'>
+    <div class="row-fluid">
+      <div class="input-prepend input-append inline">
+        <span class="add-on">属性:</span>
+        <input type="text" name="input_attr" data-url="@{Attributes.sameAttr()}" placeholder="手动输入属性">
+        <input type="button" class="btn btn-primary" value="添加" id="add_attr_btn">
+      </div>
+
+      <div class="input-prepend input-append inline">
+        <select name="templateId" class="inline">
+          <option value="">请选择模板</option>
+        #{list items:templates, as:'template'}
+          <option value="${template.id}">${template.name}</option>
+        #{/list}
+        </select>
+        <input type="hidden" name="sku" value="${pro.sku}">
+        <a class="btn btn-primary" rel="popover" content="将属性模板内的属性字段添加到下方" id="add_template_btn">添加属性</a>
+      </div>
+
+    #{info_row title:'Attributes'/}
+    #{include 'Products/_attrs.html'/}
+    </div>
   </div>
 
-
-  <div class="input-prepend input-append inline">
-    <select name="templateId" class="inline">
-      <option value="">请选择模板</option>
-    #{list items:templates, as:'template'}
-      <option value="${template.id}">${template.name}</option>
-    #{/list}
-    </select>
-    <input type="hidden" name="sku" value="${pro.sku}">
-    <a class="btn btn-primary" rel="popover" content="将属性模板内的属性字段添加到下方" id="add_template_btn">添加属性</a>
+  <div class="tab-pane fade" id='attach'>
+  #{include 'Products/_attach.html'/}
   </div>
-
-#{info_row title:'Attributes'/}
-#{include 'Products/_attrs.html'/}
 </div>
+
 
 <form action="@{Products.addAttr()}" method="post" id="add_attr_form">
   <input type="hidden" name="sku" value="${pro.sku}">
