--- a/core/app/views/Payments/showBatchApply.html
+++ b/core/app/views/Payments/showBatchApply.html
@@ -1,6 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:"汇签审核详情"  /}
 #{set 'moreScripts'}
+    #{script 'jquery.filedrop.js'/}
+    #{script 'component/dropUpload.coffee'/}
     #{script 'applys/index.es6'/}
 #{/set}
 
@@ -156,6 +158,20 @@
     </div>
   </div>
 </form>
+
+<div class="row-fluid">
+  <div class="span12">
+    <h4 class="alert alert-success">附件 <i class="icon-sort-down"></i></h4>
+  </div>
+</div>
+<div class="row-fluid">
+  <div style="min-height:300px;" class="span12 well" id="dropbox">
+    <ul class="thumbnails uploaded"></ul>
+  #{power.ck "products.edit"}
+    <div class="message" style="height:150px;padding-top:145px;text-align:center;">Drag & Drop</div>
+  #{/power.ck}
+  </div>
+</div>
 
 <form action="@{Payments.transferNextDepartment()}" method="post" id="transfer_form">
   <input type="hidden" name="applyId" value="${apply.id}">
