新增lecome的环境部署

--- a/core/app/views/Payments/batchApplyIndex.html
+++ b/core/app/views/Payments/batchApplyIndex.html
@@ -102,7 +102,7 @@
                 ${b.result?.label()} / ${b.handler.username} <br>
                 #{/list}
             </td>
-            <td>${a.memo}</td>
+            <td rel="tooltip" title="${a.memo}">${a.memo.xxLong()}</td>
           </tr>
         #{/list}
           <tr>
