--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -207,7 +207,7 @@
         #{/list}
           <tr>
             <td colspan="14">
-            #{if outbounds.size() == 0}
+            #{if b2bOutbounds.size() == 0}
               暂时还没有入库记录
             #{/if}
             #{else }
@@ -261,7 +261,7 @@
         #{/list}
           <tr>
             <td colspan="14">
-            #{if outbounds.size() == 0}
+            #{if others.size() == 0}
               暂时还没有入库记录
             #{/if}
             #{else }
