修改包材物料上传附件

--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -4,7 +4,7 @@
     #{script 'jquery.filedrop.js'/}
     #{script 'component/dropUpload.coffee'/}
     #{script 'materialPlans/edit.js'/}
-    #{script 'materialPlans/show.coffee'/}
+    #{script 'materialPlans/show.es6'/}
 #{/set}
 
 #{errorMsgs /}
