--- a/core/app/views/FBAs/b2bBoxLabel.html
+++ b/core/app/views/FBAs/b2bBoxLabel.html
@@ -37,7 +37,7 @@
                   <span style="font-weight: bold;">SKU</span>
                 </th>
                 <th width="8%">
-                  <span style="font-weight: bold;">"箱号<br>(第几箱-总箱数)</span>
+                  <span style="font-weight: bold;">箱号<br>(第几箱-总箱数)</span>
                 </th>
               </tr>
               <tr>
@@ -50,7 +50,7 @@
                 <th>产品名称</th>
                 <th>数量（pcs)</th>
                 <th>毛重(KG)</th>
-                <th>长*宽*高(cm)</th>
+                <th>长*宽*高<br>(cm)</th>
               </tr>
               <tr>
                 <td>${procureUnit?.product?.abbreviation}</td>
@@ -77,7 +77,7 @@
         <tr align="center">
           <td>
             <table border="1" width="100%" style="border:4px solid #000000;table-layout: fixed;
-                  word-wrap:break-word;" cellpadding="0" cellspacing="0">
+                    word-wrap:break-word;" cellpadding="0" cellspacing="0">
               <tr>
                 <td colspan="4" style="text-align:center;">梦拓普技术有限公司</td>
               </tr>
@@ -96,7 +96,7 @@
                   <span style="font-weight: bold;">SKU</span>
                 </th>
                 <th width="8%">
-                  <span style="font-weight: bold;">箱数(Ctn)</span>
+                  <span style="font-weight: bold;">箱号<br>(第几箱-总箱数)</span>
                 </th>
               </tr>
               <tr>
@@ -106,14 +106,14 @@
                 <td></td>
               </tr>
               <tr>
-                <th>箱号</th>
                 <th>产品名称</th>
-                <th>净重(KG)</th>
+                <th>数量（pcs)</th>
                 <th>毛重(KG)</th>
+                <th>长*宽*高<br>(cm)</th>
               </tr>
               <tr>
-                <td height="50px;"></td>
                 <td>${procureUnit?.product?.abbreviation}</td>
+                <td height="50px;"></td>
                 <td></td>
                 <td></td>
               </tr>
