订单页面搜索优化

--- a/core/app/views/Brands/index.html
+++ b/core/app/views/Brands/index.html
@@ -2,7 +2,14 @@
 #{set title:'Brand' /}
 #{set 'moreScripts'}
 #{/set}
-
+#{if brands.size() == 0}
+<div class="row-fluid">
+  <div>
+    等待添加新品牌
+  </div>
+</div>
+#{/if}
+#{else }
 <div class="row-fluid">
   <form method="post" action="@{Brands.create()}">
     <div class="span3 well well-small">
@@ -115,3 +122,4 @@
     </div>
   </div>
 </div>
+#{/else}
