--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -70,18 +70,6 @@
       </select>
 
       <div class="input-prepend inline">
-        <span class="add-on">SKU:</span>
-        <input type="text" style="width:160px;" id="inputsku" name="p.sku" placeholder="SKU" autocomplete="off" value="${p.sku}">
-      </div>
-
-      <!--
-      <div class="input-prepend inline">
-        <span class="add-on">PERCENT:</span>
-        <input type="text" style="width:40px;" name="p.percent" placeholder="百分比" autocomplete="off" value="${p.percent}">
-      </div>}
-      -->
-
-      <div class="input-prepend inline">
         <select name="p.category" id="categories">
           <option value="">品线</option>
         #{list items:categoryIds, as:'c'}
@@ -90,19 +78,32 @@
         </select>
       </div>
 
+      <select name="p.field" class="inline">
+      #{list items:models.view.post.OrderPOST.F, as:'f'}
+        <option value="${f.name()}" #{if p.field==f.name()} selected #{/if}>${f.label()}</option>
+      #{/list}
+      </select>
+
+      <!--
+      <div class="input-prepend inline">
+        <span class="add-on">PERCENT:</span>
+        <input type="text" style="width:40px;" name="p.percent" placeholder="百分比" autocomplete="off" value="${p.percent}">
+      </div>}
+      -->
+
+
       <div class="inline input-append" id="search_btn">
         <input type="hidden" name="p.page" value="${p.page}">
-        <!-- TODO  +2 销售数量大于 2 暂时不支持 -->
-        <input type="text" style="width:160px;" name="p.search" placeholder="例 *cvd4hs8y6m, 可带 *" value="${p.search}">
+        <input type="text" style="width:160px;" name="p.search" placeholder="请选择前面查询类型下拉框" value="${p.search}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
 
       <div class="inline input-append">
-        <input type="button" class="btn btn-success" id="downExcel" value="导出订单Excel">
+        <input type="button" class="btn btn-success" id="downExcel" value="导出订单">
       </div>
 
       <div class="inline input-append">
-        <input type="button" class="btn btn-warning" id="downSaleFeeExcel" value="导出订单费用Excel">
+        <input type="button" class="btn btn-warning" id="downSaleFeeExcel" value="导出订单费用">
       </div>
 
     </div>
