--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -42,14 +42,14 @@
           <tr>
             <th>物料编码</th>
             <th>物料名称</th>
-            <th>物料类别</th>
-            <th>B0M—ID</th>
+            <th width="60px;">物料类别</th>
+            <th width="60px;">B0M—ID</th>
             <th>规格</th>
-            <th width="150px;">材质</th>
+            <th width="280px;">材质</th>
             <th width="150px;">工艺</th>
-            <th width="150px;">工厂物料代码</th>
-            <th width="150px;">最近采购价</th>
-            <th width="250px;">操作</th>
+            <th width="120px;">工厂物料代码</th>
+            <th width="100px;">最近采购价</th>
+            <th width="100px;">操作</th>
           </tr>
         #{list items:materials, as:'m'}
           <tr>
