修改物料请款页面不显示trackNo bug

--- a/core/app/views/Applys/transport.html
+++ b/core/app/views/Applys/transport.html
@@ -77,7 +77,7 @@
           </tr>
           <tr>
             <th>TrackNo</th>
-            <td>
+            <td>${ship.trackNo}
                 #{if ship.trackNo}
                   <a href="${ship.internationExpress?.trackUrl(ship.trackNo)}" target="_blank">
                     <i class="icon-external-link"></i>
