--- a/core/app/views/ProcureUnits/fnSkuLable.html
+++ b/core/app/views/ProcureUnits/fnSkuLable.html
@@ -41,7 +41,7 @@
         ${selling.aps?.sortTitle()}
           <br>
           <div style="float:left;"><b>NEW</b></div>
-          <div style="float:right;padding-right:10px;"><b>${selling.market?.uropeShow()}</b></div><br>
+          <div style="float:right;padding-right:10px;"><b>${selling.market?.shortHand()}</b></div><br>
         </td>
       #{/list}
   </tr>
